Fix chat EventSub auth flow and callback redirects; update test app

--- a/test-app/public/index.html
+++ b/test-app/public/index.html
@@ -24,8 +24,12 @@
         <label>Broadcaster user id
           <input id="broadcasterInput" type="text" placeholder="123456789" />
         </label>
+        <label>Broadcaster username
+          <input id="broadcasterLoginInput" type="text" placeholder="streamer_login" />
+        </label>
         <div class="row">
           <button id="refreshBotsBtn" type="button">Refresh Bots</button>
+          <button id="resolveBroadcasterBtn" type="button">Resolve Username To ID</button>
           <button id="startGrantBtn" type="button">Start Broadcaster Grant</button>
           <button id="refreshGrantsBtn" type="button">Refresh Grants</button>
         </div>
