Fix EventSub delivery reliability and log full test-app events

--- a/test-app/public/index.html
+++ b/test-app/public/index.html
@@ -42,8 +42,8 @@
           <label>Event type
             <select id="eventTypeSelect">
               <option value="channel.chat.message">channel.chat.message</option>
-              <option value="channel.online">channel.online</option>
-              <option value="channel.offline">channel.offline</option>
+              <option value="stream.online">stream.online</option>
+              <option value="stream.offline">stream.offline</option>
             </select>
           </label>
           <label>Transport
